started events page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,6 +17,11 @@
           }}</button>
       </li>
       <li class="nav-item">
+        <button onclick="window.location.href = '/events'" class="buttonNavbar" type="button">{{ 'NAVBAR.EVENTS' |
+          translate
+          }}</button>
+      </li>
+      <li class="nav-item">
         <button onclick="window.location.href = '/team'" class="buttonNavbar" type="button">{{ 'NAVBAR.TEAM' | translate
           }}</button>
       </li>
