--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -279,6 +279,35 @@
       </div>
     </div>
   </div>
+
+  <!-- Sponsors Actuales -->
+  <div class="bottomLine">
+    <div class="row">
+      <h1 class="section-title">Sponsors</h1>
+
+      <br>
+
+      <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img src="assets/image/sponsors/jpmorgan.png" height="70vmin" alt="Logo Innovid"
+                    style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
+            <div class="col-sm">
+                <img src="assets/image/sponsors/innovid.png" height="35vmin" alt="Logo Innovid"
+                    style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
+            <div class="col-sm">
+                <img src="assets/image/sponsors/eiwa.png" height="180vmin" alt="Logo Eiwa"
+                    style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
   <!-- Contacto -->
   <div class="noLine">
     <h1 id="contacto">{{ 'NAVBAR.CONTACT' | translate }}</h1>
