contact page language working

--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -15,30 +15,30 @@
        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="contacto">Contacto</h1>
-                    <h3>Completá los siguientes datos, nos contactaremos a la brevedad.</h3>
+                    <h1 class="contacto">{{ 'CONTACT.TITLE' | translate }}</h1>
+                    <h3>{{ 'CONTACT.SUBTITLE' | translate }}</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <form class="contact" [formGroup]="form" method="post" (ngSubmit)="onSubmit()">
                         <mat-form-field>
-                          <mat-label>Nombre</mat-label>
+                          <mat-label>{{ 'CONTACT.NAME' | translate }}</mat-label>
                           <input class="white-text" matInput [formControl]="name" required>
-                          <mat-error *ngIf="name.invalid">Please enter your name</mat-error>
+                          <mat-error *ngIf="name.invalid">{{ 'CONTACT.NAME_ERROR' | translate }}</mat-error>
                         </mat-form-field>
                         <mat-form-field>
-                          <mat-label>Email</mat-label>
+                          <mat-label>{{ 'CONTACT.EMAIL' | translate }}</mat-label>
                           <input class="white-text" matInput [formControl]="email" placeholder="email@example.com" required>
-                          <mat-error *ngIf="email.invalid">Please enter a valid email</mat-error>
+                          <mat-error *ngIf="email.invalid">{{ 'CONTACT.EMAIL_ERROR' | translate }}</mat-error>
                         </mat-form-field>
                         <mat-form-field>
-                          <mat-label>Mensaje</mat-label>
+                          <mat-label>{{ 'CONTACT.MESSAGE' | translate }}</mat-label>
                           <textarea class="white-text" matInput [formControl]="message" maxlength="256" placeholder="I'm interested in..." required></textarea>
                           <mat-hint align="end"> {{message.value?.length || 0}}/256</mat-hint>
-                          <mat-error *ngIf="message.invalid">Please enter a message</mat-error>
+                          <mat-error *ngIf="message.invalid">{{ 'CONTACT.MESSAGE_ERROR' | translate }}</mat-error>
                         </mat-form-field>
-                        <button [disabled]="isLoading" class="submit" type="submit">Enviar</button>
+                        <button [disabled]="isLoading" class="submit" type="submit">{{ 'CONTACT.SEND' | translate }}</button>
                         <input [formControl]="honeypot" class="hidden" type="text" />
                         <div [ngClass]="!submitted? 'hidden' : 'visible'" class="center-text">
                           <span class="white-text">{{responseMessage}}</span>
