--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -7,14 +7,14 @@
     <title>IEEExtreme</title>
 </head>
 <header>
-    <app-navbar-ieeextreme></app-navbar-ieeextreme>
+  <app-navbar-courses></app-navbar-courses>
 </header>
 
 <body>
 
     <!-- Inicio and facts -->
-    <div class="topbottomLine" id="home">
-        <img src="./../../assets/image/XtremeLogoWhite.png" height="150vmin" alt="Logo ITBA-IEEE">
+    <div class="bottomLine" id="home">
+        <img src="./../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
         <div class="container" id="facts">
             <div class="row">
               <div class="col-sm">
@@ -49,7 +49,7 @@
                 <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
               </div>
               <div class="col-sm">
-                <img src="./../../assets/image/teamdisc.png" height="200vmin" alt="Logo ITBA-IEEE">
+                <img src="./../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
               </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <img src="./../../assets/image/tournament.png" height="200vmin" alt="Logo ITBA-IEEE">
+                    <img src="./../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
                 </div>
               <div class="col-sm">
                 <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
@@ -73,7 +73,7 @@
     <!-- Sponsor 2020 -->
     <div class="noLine" id="sponsorship">
       <h1>Sponsorship 2020</h1>
-      <p class="whitebckg">{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
+      <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
         <div class="container">
             <div class="row">
               <div class="col-sm">
@@ -105,7 +105,7 @@
     </div>
 
     <!-- Prev Sponsors -->
-    <div class="bottomLine">
+    <div class="sponsor">
       <h1 class="right">{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
       <div class="container">
         <div class="row" style="margin-top: 2vmin;">
@@ -113,7 +113,7 @@
             <img src="./../../assets/image/sponsors/avature.png" height="50vmin" alt="Logo Avature" style="position: relative; top: 50%; transform: translateY(-50%);">
           </div>
           <div class="col-sm">
-            <img src="./../../assets/image/sponsors/eiwa.png" height="60vmin" alt="Logo Eiwa" style="position: relative; top: 50%; transform: translateY(-50%);">
+            <img src="./../../assets/image/sponsors/eiwa.png" height="65vmin" alt="Logo Eiwa" style="position: relative; top: 50%; transform: translateY(-50%);">
           </div>
           <div class="col-sm">
             <img src="./../../assets/image/sponsors/flowics.png" height="30vmin" alt="Logo Flowics" style="position: relative; top: 50%; transform: translateY(-50%);">
@@ -127,10 +127,10 @@
             <img src="./../../assets/image/sponsors/mulesoft.png" height="50vmin" alt="Logo Mulesoft" style="position: relative; top: 50%; transform: translateY(-50%);">
           </div>
           <div class="col-sm">
-            <img src="./../../assets/image/sponsors/pampa.png" height="50vmin" alt="Logo Pampa" style="position: relative; top: 50%; transform: translateY(-50%);">
+            <img src="./../../assets/image/sponsors/pampa.png" height="40vmin" alt="Logo Pampa" style="position: relative; top: 50%; transform: translateY(-50%);">
           </div>
           <div class="col-sm">
-            <img src="./../../assets/image/sponsors/tgs.png" height="40vmin" alt="Logo TGS" style="position: relative; top: 50%; transform: translateY(-50%);">
+            <img src="./../../assets/image/sponsors/tgs.png" height="65vmin" alt="Logo TGS" style="position: relative; top: 50%; transform: translateY(-50%);">
           </div>
           <div class="col-sm">
             <img src="./../../assets/image/sponsors/unify.png" height="30vmin" alt="Logo Unify" style="position: relative; top: 50%; transform: translateY(-50%);">
