added same navbar to all pages

--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -7,7 +7,7 @@
     <title>Contacto</title>
 </head>
 <header>
-    <app-navbar-courses></app-navbar-courses>
+    <app-navbar></app-navbar>
 </header>
 
 <body>
