--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,11 @@
           }}</button>
       </li>
       <li class="nav-item">
+        <button onclick="window.location.href = '/sponsors'" class="buttonNavbar" type="button">{{ 'NAVBAR.SPONSORS' |
+          translate
+          }}</button>
+      </li>
+      <li class="nav-item">
         <button onclick="window.location.href = '/team'" class="buttonNavbar" type="button">{{ 'NAVBAR.TEAM' | translate
           }}</button>
       </li>
