--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -7,7 +7,7 @@
     <title>Python Courses</title>
 </head>
 <header>
-    <app-navbar-courses></app-navbar-courses>
+    <app-navbar></app-navbar>
 </header>
 
 <body>
