--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -7,7 +7,7 @@
     <title>IEEExtreme</title>
 </head>
 <header>
-  <app-navbar-courses></app-navbar-courses>
+  <app-navbar></app-navbar>
 </header>
 
 <body>
