--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -12,31 +12,31 @@
 
 <body>
 
-    <div class="topbottomLine" id="home" style="margin-bottom:2%">
+    <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-sm">
-                    <h1 id="logotext">Sponsors</h1>
+                <div class="col-sm pt-1 pb-1" >
+                    <h1 class="page-title">{{ 'NAVBAR.SPONSORS' | translate }}</h1>
                 </div>
             </div>
         </div>
     </div>
 
-    <mat-tab-group>
-        <mat-tab label="{{ 'GENERAL.ACTUAL' | translate }}">
+    <mat-tab-group class="mt-4">
+        <mat-tab label="2020">
             <div class="bottomLine">
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
-                        <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/jpmorgan.png" height="70vmin" alt="Logo Innovid"
-                                style="position: relative; top: 50%; transform: translateY(-50%);">
-                        </div>
                         <div class="col-sm">
                             <img src="./../../assets/image/sponsors/innovid.png" height="35vmin" alt="Logo Innovid"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/eiwa.png" height="180vmin" alt="Logo Eiwa"
+                            <img src="./../../assets/image/sponsors/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                                style="position: relative; top: 50%; transform: translateY(-50%);">
+                        </div>
+                        <div class="col-sm">
+                            <img src="./../../assets/image/sponsors/eiwa.png" height="85vmin" alt="Logo Eiwa"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
 
@@ -57,7 +57,7 @@
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/eiwa.png" height="150vmin" alt="Logo Eiwa"
+                            <img src="./../../assets/image/sponsors/eiwa.png" height="85vmin" alt="Logo Eiwa"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
@@ -71,7 +71,7 @@
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/flowics.png" height="70vmin" alt="Logo Flowics"
+                            <img src="./../../assets/image/sponsors/flowics.png" height="45vmin" alt="Logo Flowics"
                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
