--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -16,15 +16,16 @@
     <div class="row pt-5 mt-5 mr-5 ml-5 d-flex justify-content-center row-eq-height">
         
         <!-- Eventos (material angular) -->
+        
   <div class="bottomLine">
-    <div class="topbottomLine" id="home" style="margin-bottom:2%">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <h1 id="logotext">{{ 'NAVBAR.EVENTS' | translate }}</h1>
-                </div>
-            </div>
-        </div>
+    <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm pt-1 pb-1" >
+                  <h1 class="page-title">{{ 'NAVBAR.EVENTS' | translate }}</h1>
+              </div>
+          </div>
+      </div>
     </div>
      
     <div class="card-group-row">
