--- a/src/app/sponsors/sponsors.component.css
+++ b/src/app/sponsors/sponsors.component.css
@@ -21,12 +21,12 @@ body {
     border-top:#0d47a1 2px solid;
     border-bottom: #0d47a1 2px solid;
     vertical-align: middle;
-    align-content: center;
+    align-content: centCONTACTer;
     
 }
 
 .page-title {
-    color: #0d47a1
+    color: #0d47a1;
 }
 
 .bottomLine {
