--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -13,6 +13,16 @@
 
 <body>
 
+    <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm pt-1 pb-1" >
+                    <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="mt-5 mr-5 ml-5">
 
         <mat-tab-group dynamicHeight>
