--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -12,10 +12,19 @@
 
 <body>
     <section id="contact">
+
+      <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm pt-1 pb-1" >
+                    <h1 class="page-title">{{ 'NAVBAR.CONTACT' | translate }}</h1>
+                </div>
+            </div>
+        </div>
+      </div>
        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="contacto">{{ 'CONTACT.TITLE' | translate }}</h1>
                     <h3>{{ 'CONTACT.SUBTITLE' | translate }}</h3>
                 </div>
             </div>
