--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -7,6 +7,18 @@ body {
 	padding-top: 160px;
 }
 
+.topbottomLine { 
+    border-top:#0d47a1 2px solid;
+    border-bottom: #0d47a1 2px solid;
+    vertical-align: middle;
+    align-content: center;
+    
+}
+
+.page-title {
+    color: #0d47a1;
+    font-size: 2.5em
+}
 .image-size{
    max-width: 100%;
    max-height: 20em;
