--- a/src/app/noticias/noticias.component.css
+++ b/src/app/noticias/noticias.component.css
@@ -12,6 +12,19 @@ body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+.topbottomLine { 
+    border-top:#0d47a1 2px solid;
+    border-bottom: #0d47a1 2px solid;
+    vertical-align: middle;
+    align-content: center;
+    
+}
+
+.page-title {
+    color: #0d47a1;
+    font-size: 2.5em
+}
+
 #icons {
     text-align: center;
     color: whitesmoke;
