--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -12,6 +12,16 @@
 
 <body>
     <div class="body" fxLayoutAlign="center center" fxLayout="column">
+        
+        <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm pt-1 pb-1" >
+                        <h1 class="page-title">{{ 'NAVBAR.NEWS' | translate }}</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="spacenav"></div>
         <div class="spacenav"></div>
