--- a/src/app/noticia/noticia.component.html
+++ b/src/app/noticia/noticia.component.html
@@ -31,7 +31,7 @@
         <div *ngIf="(newsData | async)" fxLayoutAlign="center center" fxLayout="column">
             <div fxLayoutAlign="center center" fxLayout="column">
                 <div fxLayoutAlign="center center" fxLayout="column">
-                    <p class="author-text">{{(newsData | async).author}}</p>
+                    <p class="author-text word-break">{{(newsData | async).author}}</p>
 
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm">
-                            <h1 id="logotext">{{(newsData | async).title}} </h1>
+                            <h1 id="logotext" class="word-break">{{(newsData | async).title}} </h1>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
 
             <div fxLayoutAlign="center center" fxLayout="column">
                 <div fxLayoutAlign="center center" fxLayout="column">
-                    <p class="add-margin author-text">{{(newsData | async).shortIntro}}</p>
+                    <p class="add-margin author-text word-break">{{(newsData | async).shortIntro}}</p>
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                 <div class="blog-image" fxLayoutAlign="center center" fxLayout="column">
                     <div class="add-margin">
                         <mdb-card-img class="roundedBlock" src="{{(newsData | async).imageUrl}}"
-                            alt="Foto de Curso de Python">
+                            alt="Foto de noticia">
                         </mdb-card-img>
 
                         <p class="whitetext-photo-text">{{(newsData | async).imageText}}</p>
@@ -70,12 +70,12 @@
                 <div class="container" fxLayoutAlign="center center" fxLayout="column">
                     <div class="row">
                         <div class="col-sm">
-                            <div [innerHTML]="content" class="add-margin whitetext"> </div>
+                            <div [innerHTML]="content" class="add-margin whitetext word-break"> </div>
                         </div>
                     </div>
                 </div>
                 <!--Emoji Rating-->
-                <div style="margin-bottom:20px" class="whitetext-left">¿Qué te pareció la noticia?</div>
+                <div style="margin-bottom:20px" class="whitetext-left word-break">¿Qué te pareció la noticia?</div>
 
                 <div style="margin-bottom:10px" *ngIf="emojisVisible">
                     <ngx-emoji style="margin-right: 7px" [emoji]="{ id: 'thumbsdown', skin: 3 }" size="40"
@@ -126,14 +126,14 @@
 
             <div class="bottomLine">
             </div>
-            <!--<div class="bottomLine" fxLayoutAlign="center center" fxLayout="column"> 
+            <!--<div class="bottomLine" fxLayoutAlign="center center" fxLayout="column">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm" >
                             <h1 id="whitetext">{{(newsData | async).author}}</h1>
                         </div>
                     </div>
-                </div> 
+                </div>
             </div>-->
         </div>
         <div class="add-margin">
